--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "author": "",
-  "name": "",
-  "version": "0.0.0",
+  "author": "Joe Pettersson",
+  "name": "Gutenberg",
+  "version": "0.0.1",
   "dependencies": {},
   "devDependencies": {}
 }
